@@ -4,12 +4,17 @@ import com.uvas.uvasapi.domain.Diretor;
 import com.uvas.uvasapi.domain.Endereco;
 import com.uvas.uvasapi.domain.Grupo;
 import com.uvas.uvasapi.domain.Pessoa;
+import com.uvas.uvasapi.services.DiretorService;
+import com.uvas.uvasapi.services.PessoaService;
 import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -21,19 +26,30 @@ public class GrupoCreateOrUpdateDTO {
     private LocalDate dataInauguracao;
 
     @NotNull(message = "Diretor do grupo não informado")
-    private Diretor diretorId;
+    private String diretorId;
 
-    private List<PessoaCreateOrUpdateDTO> integrantes;
+    private List<String> integrantesIds = new ArrayList<>();
 
     private Endereco enderecoId;
 
-    public Grupo getGrupo(){
+    public Grupo getGrupo(DiretorService diretorService, PessoaService pessoaService){
         Grupo grupo = new Grupo();
         
         grupo.setNome(nome);
         grupo.setDataInauguracao(dataInauguracao);
-        grupo.setDiretorId(diretorId);
-        grupo.setIntegrantes(integrantes.stream().map(PessoaCreateOrUpdateDTO::getPessoa).toList());
+        Diretor diretor = diretorService.getDiretorById(diretorId);
+        grupo.setDiretorId(diretor);
+        List<Pessoa> integrantes = integrantesIds.stream().map(pessoaService::getPessoaById).collect(Collectors.toList());
+        grupo.setIntegrantes(integrantes);
+        grupo.setEnderecoId(enderecoId);
+
+        return grupo;
+    }
+    public Grupo getGrupo(){
+        Grupo grupo = new Grupo();
+
+        grupo.setNome(nome);
+        grupo.setDataInauguracao(dataInauguracao);
         grupo.setEnderecoId(enderecoId);
 
         return grupo;
